@@ -498,15 +498,25 @@ class NetworkRepositoryClient(xmlshims.NetworkConvertors,
         entitlement = self.fromEntitlement(entitlement)
         return self.c[serverName].addEntitlement(entGroup, entitlement)
 
+    def deleteEntitlement(self, serverName, entGroup, entitlement):
+        entitlement = self.fromEntitlement(entitlement)
+        return self.c[serverName].deleteEntitlement(entGroup, entitlement)
+
     def addEntitlementGroup(self, serverName, entGroup, userGroup):
         return self.c[serverName].addEntitlementGroup(entGroup, userGroup)
 
     def addEntitlementOwnerAcl(self, serverName, userGroup, entGroup):
         return self.c[serverName].addEntitlementOwnerAcl(userGroup, entGroup)
 
+    def deleteEntitlementOwnerAcl(self, serverName, userGroup, entGroup):
+        return self.c[serverName].deleteEntitlementOwnerAcl(userGroup, entGroup)
+
     def listEntitlements(self, serverName, entGroup):
         l = self.c[serverName].listEntitlements(entGroup)
         return [ self.toEntitlement(x) for x in l ]
+
+    def listEntitlementGroups(self, serverName):
+        return self.c[serverName].listEntitlementGroups()
 
     def troveNames(self, label):
 	return self.c[label].troveNames(self.fromLabel(label))
